Finished Accordian Menu Structure
Clicking a chart now prints it’s __data__

--- a/Resources/package.json
+++ b/Resources/package.json
@@ -9,13 +9,13 @@
     "icon": "link.png",
     "toolbar": true,
     "frame": true,
-    "width": 1024,
-    "height": 768,
-    "position": "mouse",
-    "min_width": 400,
-    "min_height": 200,
-    "max_width": 800,
-    "max_height": 600,
+    "width": 1920,
+    "height": 1080,
+    "position": "center",
+    "min_width": 1280,
+    "min_height": 720,
+    "max_width": 1920,
+    "max_height": 1080,
     "kiosk" : false
   },
   "webkit": {
